<resources>
    <string name="app_name">E-tüt</string>
    <string name="sign">Sign in</string>
    <string name="email">E-mail</string>
    <string name="editEmail">example@gmail.com</string>
    <string name="password">Password</string>
    <string name="editPassword">********</string>
    <string name="SIGN">SIGN IN</string>
    <string name="oruse">or use one of your social profiles</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="username">User Name</string>
    <string name="cont">Continue</string>
    <string name="haveaccount">Have an account? Sign In!</string>
</resources>